--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,21 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Express Skills</title>
-</head>
-<body>
-    <h1>Coding Skills</h1>
-    <ul>
+<%- include('../partials/header') %>
+
+<h1>Coding Skills</h1>
+<a class="btn btn-primary btn-sm" href="/skills/new">Add Skill</a>
+    <ul class="list-group list-group-flush">
         <% skills.forEach(function(s) { %>
-            <li>
-                <a href="/skills/<%= s.id %>">
+            <li class="list-group-item">
+                <a class="btn btn-outline-secondary btn-sm" href="/skills/<%= s.id %>">
                     <%= s.skill %>
                 </a>
             </li>
-            <% }); %>
+        <% }); %>
     </ul>
-</body>
-</html>
+
+<%- include('../partials/footer') %>
